# Energy-Languages

./: .gitignore  Makefile  install-ada.sh  install-chapel.sh  install-dart.sh  install-erlang.sh  install-fortran.sh  install-haskell.sh  install-java.sh  install-javascript.sh  install-jruby.sh  install-julia.sh  install-lisp.sh  install-lua.sh  install-ocaml.sh  install-perl.sh  install-php.sh  install-python.sh  install-racket.sh  install-ruby.sh  install-rust.sh  install-swift.sh  install-typescript.sh
Ada/: Makefile
Ada/binary-trees/: Makefile
Ada/fannkuch-redux/: Makefile
Ada/fasta/: Makefile
Ada/k-nucleotide/: Makefile
Ada/mandelbrot/: Makefile
Ada/n-body/: Makefile
Ada/pidigits/: Makefile
Ada/regex-redux/: Makefile
Ada/reverse-complement/: Makefile
Ada/spectral-norm/: Makefile
C++/binary-trees/: Makefile
C++/fannkuch-redux/: Makefile
C++/fasta/: Makefile
C++/k-nucleotide/: Makefile
C++/mandelbrot/: Makefile
C++/n-body/: Makefile
C++/pidigits/: Makefile
C++/regex-redux/: Makefile
C++/reverse-complement/: Makefile
C++/spectral-norm/: Makefile
C/binary-trees/: Makefile
CSharp/: Makefile
Chapel/: Makefile
Dart/: Makefile
Pascal/: compile_all.py
Rust/binary-trees/: Cargo.toml  Makefile
Rust/k-nucleotide/: Cargo.toml  Makefile
Rust/mandelbrot/: Cargo.toml  Makefile
benchmarksgame-sourcecode/: LICENSE
install/: rpi-dart.sh  rpi-fortran.sh  rpi-fsharp.sh  rpi-golang.sh  rpi-jruby.sh  rpi-julia.sh  rpi-ocaml.sh  rpi-pascal.sh  rpi-perl.sh  rpi-python.sh  rpi-swift.sh  ubuntu-c++.sh  ubuntu-c.sh  ubuntu-dotnet.sh
(+462 files in other folders)
