[package]
name = "binary-trees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.11.1"
crate = "0.0.2"
rayon = "1.6.0"
typed-arena = "2.0.1"


[[bin]]
name = "binarytrees"
path = "binarytrees.rs"
