[package]
name = "knucleotide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate = "0.0.2"
futures = "0.3.25"
futures-cpupool = "0.1.8"
hashbrown = "0.13.1"
indexmap = "1.9.2"
itertools = "0.10.5"
num = "0.4.0"
ordermap = "0.4.2"
tokio-threadpool = "0.1.18"
[[bin]]
name = "knucleotide"
path = "knucleotide.rs"
