[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crate = "0.0.2"
generic-array = "0.14.6"
num-traits = "0.2.15"
numeric-array = "0.5.2"
rayon = "1.6.0"

[[bin]]
name = "mandelbrot"
path = "mandelbrot.rs"
